--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react-dom": "^17.0.14",
     "@types/react-redux": "^7.1.23",
     "bootstrap": "^4.6.0",
+    "install": "^0.13.0",
+    "npm": "^8.5.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
