--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "@types/react-redux": "^7.1.23",
+    "@types/redux-persist": "^4.3.1",
+    "@types/redux-persist-transform-encrypt": "^2.0.2",
     "bootstrap": "^4.6.0",
     "install": "^0.13.0",
     "npm": "^8.5.5",
@@ -26,6 +28,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-persist-expire": "^1.1.0",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
