--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-redux": "^7.1.23",
     "@types/redux-persist": "^4.3.1",
     "@types/redux-persist-transform-encrypt": "^2.0.2",
+    "axios": "^0.26.1",
     "bootstrap": "^4.6.0",
     "install": "^0.13.0",
     "npm": "^8.5.5",
