--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
+    "@types/moment": "^2.13.0",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
@@ -22,6 +23,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^4.6.0",
     "install": "^0.13.0",
+    "moment": "^2.29.1",
     "npm": "^8.5.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
