--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist-expire": "^1.1.0",
     "redux-thunk": "^2.4.1",
+    "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
